fixed bug on complaint import